# WWW2026_OPL_Limited_Supply

./: .gitignore  README.md  pyproject.toml  run.sh
conf/: config.yaml
conf/setting/: default.yaml
real/: dataset.py  main_estimation_noise.py  main_n_users.py  main_s_max.py  main_supply_q_hat_is_estimate.py  main_supply_q_hat_is_true.py  run.sh
real/agent/: agent.py
real/conf/: config.yaml
real/conf/setting/: default.yaml
src/: dataset.py  main_estimation_noise.py  main_heatmap.py  main_lambda.py  main_opl.py  main_s_max.py  main_s_max_ours.py  main_step.py  main_step_ours.py  main_supply_item.py  main_user_action_ratio.py  policylearner.py  reward_type.py  user_action_ratio.py  utils.py
src/agent/: agent.py
